{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 7,
  "lineage": "beb4a4a3-76db-f5d4-db61-b2afb102e453",
  "resources": [
    {
      "module": "module.vnet",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "management-security-group",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/93171d5e-b754-4f74-8b0b-b74c96c8c918/resourceGroups/example-rg/providers/Microsoft.Network/networkSecurityGroups/management-security-group",
            "location": "australiaeast",
            "name": "management-security-group",
            "resource_group_name": "example-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "management-security-group-vm-management-rules",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/93171d5e-b754-4f74-8b0b-b74c96c8c918/resourceGroups/example-rg/providers/Microsoft.Network/networkSecurityGroups/management-security-group/securityRules/vm-management-rules",
            "name": "vm-management-rules",
            "network_security_group_name": "management-security-group",
            "priority": 100,
            "protocol": "TCP",
            "resource_group_name": "example-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.255.0.0/24",
              "191.191.191.191"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    }
  ]
}